RESOLVED FIXED89743
Web Inspector: InspectorState::updateCookie should not do JSON serialization if unsupported
https://bugs.webkit.org/show_bug.cgi?id=89743
Summary Web Inspector: InspectorState::updateCookie should not do JSON serialization ...
Joseph Pecoraro
Reported 2012-06-21 23:47:45 PDT
It looks like only the Chromium port implements the InspectorStateClient interface to save InspectorState cookie information. Ports that were doing nothing with this information are getting the cost of InspectorState JSON serialization. Avoid serialization if the client does not do anything with InspectorState updates.
Attachments
[PATCH] Proposed Fix (6.20 KB, patch)
2012-06-21 23:53 PDT, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2012-06-21 23:53:54 PDT
Created attachment 148969 [details] [PATCH] Proposed Fix Let the bots run first to make sure I didn't make a typo with the Chromium port, but I think this should be good.
Joseph Pecoraro
Comment 2 2012-06-21 23:54:19 PDT
WebKit Review Bot
Comment 3 2012-06-22 02:14:15 PDT
Comment on attachment 148969 [details] [PATCH] Proposed Fix Clearing flags on attachment: 148969 Committed r121013: <http://trac.webkit.org/changeset/121013>
WebKit Review Bot
Comment 4 2012-06-22 02:14:20 PDT
All reviewed patches have been landed. Closing bug.
Pavel Feldman
Comment 5 2012-06-22 18:29:13 PDT
Comment on attachment 148969 [details] [PATCH] Proposed Fix Looks good to me.
Note You need to log in before you can comment on or make changes to this bug.