Web Inspector: InspectorState::updateCookie should not do JSON serialization if unsupported https://bugs.webkit.org/show_bug.cgi?id=89743

Source/WebCore:

Since all InspectorClient's are InspectorStateClient's provide a
virtual accessor that determines whether or not InspectorClient updates
are supported or not.

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2012-06-22
Reviewed by Yury Semikhatsky.

* inspector/InspectorState.cpp:
(WebCore::InspectorState::updateCookie):
Don't serialize and message the client if the client doesn't do anything with it.

* inspector/InspectorStateClient.h:
* inspector/WorkerInspectorController.cpp:
(WebCore::InspectorStateClient::supportsInspectorStateUpdates):
Let the client say whether or not supports updates or not.

Source/WebKit/blackberry:

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2012-06-22
Reviewed by Yury Semikhatsky.

* WebCoreSupport/InspectorClientBlackBerry.cpp:
(WebCore::InspectorClientBlackBerry::updateInspectorStateCookie):

Source/WebKit/chromium:

The Chromium port does want InspectorState updates.

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2012-06-22
Reviewed by Yury Semikhatsky.

* src/InspectorClientImpl.h:
(WebKit::InspectorClientImpl::supportsInspectorStateUpdates):
* src/WebDevToolsAgentImpl.h:
(WebKit::WebDevToolsAgentImpl::supportsInspectorStateUpdates):

Canonical link: https://commits.webkit.org/107596@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121013 268f45cc-cd09-0410-ab3c-d52691b4dbfc